[gd_scene load_steps=29 format=2]

[ext_resource path="res://special_scenes/combat_UI/session_points/Star.gd" type="Script" id=1]
[ext_resource path="res://assets/icon/star_empty00.png" type="Texture" id=2]
[ext_resource path="res://assets/icon/star_empty01.png" type="Texture" id=3]
[ext_resource path="res://assets/icon/star_empty02.png" type="Texture" id=4]
[ext_resource path="res://assets/icon/star_empty03.png" type="Texture" id=5]
[ext_resource path="res://assets/icon/star_empty04.png" type="Texture" id=6]
[ext_resource path="res://assets/icon/star_empty05.png" type="Texture" id=7]
[ext_resource path="res://assets/icon/star_empty06.png" type="Texture" id=8]
[ext_resource path="res://assets/icon/star_empty07.png" type="Texture" id=9]
[ext_resource path="res://assets/icon/star_empty08.png" type="Texture" id=10]
[ext_resource path="res://assets/icon/star_empty09.png" type="Texture" id=11]
[ext_resource path="res://assets/icon/star_empty10.png" type="Texture" id=12]
[ext_resource path="res://assets/icon/star_empty11.png" type="Texture" id=13]
[ext_resource path="res://assets/icon/star_full00.png" type="Texture" id=14]
[ext_resource path="res://assets/icon/star_full01.png" type="Texture" id=15]
[ext_resource path="res://assets/icon/star_full02.png" type="Texture" id=16]
[ext_resource path="res://assets/icon/star_full03.png" type="Texture" id=17]
[ext_resource path="res://assets/icon/star_full04.png" type="Texture" id=18]
[ext_resource path="res://assets/icon/star_full05.png" type="Texture" id=19]
[ext_resource path="res://assets/icon/star_full06.png" type="Texture" id=20]
[ext_resource path="res://assets/icon/star_full07.png" type="Texture" id=21]
[ext_resource path="res://assets/icon/star_full08.png" type="Texture" id=22]
[ext_resource path="res://assets/icon/star_full09.png" type="Texture" id=23]
[ext_resource path="res://assets/icon/star_full10.png" type="Texture" id=24]
[ext_resource path="res://assets/icon/star_full11.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "empty",
"speed": 60.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": false,
"name": "full",
"speed": 60.0
} ]

[sub_resource type="Animation" id=2]
loop = true

[sub_resource type="Animation" id=3]
resource_name = "float"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 5 ), Vector2( 0, -5 ), Vector2( 0, 5 ) ]
}

[node name="Star" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 10 )
frames = SubResource( 4 )
animation = "empty"

[node name="WonAnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/won = SubResource( 2 )

[node name="FloatAnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/float = SubResource( 3 )
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
